--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Document</title>
-    <link rel="stylesheet" href="{% static 'global\css\style.css' %}">
+    <link rel="stylesheet" href="{% static 'global/css/style.css' %}">
 </head>
 <body>
     <h1>um beijo para doquinha</h1>
