--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="{% static 'global/css/style.css' %}">
 </head>
 <body>
-    <h1>um beijo para doquinha</h1>
+    <h1>pagina html</h1>
 </body>
 </html>
